--- a/res/layout/activity_changepassword.xml
+++ b/res/layout/activity_changepassword.xml
@@ -23,52 +23,45 @@
         android:layout_marginTop="16dp"
         android:src="@drawable/logo" />
 
-    <EditText
-        android:id="@+id/EditTextPassword"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/ButtonForgotPasswordSubmit"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:ems="10"
-        android:hint="password"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword" />
+        android:layout_below="@+id/EditTextConfirmPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="67dp"
+        android:text="Submit" />
 
     <EditText
-        android:id="@+id/EditTextEmail"
+        android:id="@+id/EditTextNewPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/EditTextPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:ems="10"
+        android:hint="new password" />
+
+    <EditText
+        android:id="@+id/EditTextConfirmPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/EditTextNewPassword"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="email"
-        android:imeOptions="actionNext"
-        android:inputType="text" >
+        android:hint="confirm password" />
+
+    <EditText
+        android:id="@+id/EditTextRamID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/EditTextNewPassword"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="ram id" >
 
         <requestFocus />
+
     </EditText>
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/EditTextPassword"
-        android:layout_centerHorizontal="true"
-        android:text="Log in" />
-
-    <Button
-        android:id="@+id/buttonRegister"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_below="@+id/buttonLogin"
-        android:text="Register" />
-
-    <Button
-        android:id="@+id/ButtonForgotPassword"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/buttonRegister"
-        android:layout_below="@+id/buttonRegister"
-        android:text="Forgot Password" />
+    
 
 </RelativeLayout>
