--- a/res/layout/activity_forgotpassword.xml
+++ b/res/layout/activity_forgotpassword.xml
@@ -15,7 +15,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ImageView
-        android:id="@+id/imageViewLogo"
+        android:id="@+id/imageViewQR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewTitleFSC"
@@ -24,7 +24,7 @@
         android:src="@drawable/logo" />
 
     <EditText
-        android:id="@+id/EditTextRegisterEmail"
+        android:id="@+id/EditTextForgotPasswordRamID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -33,31 +33,22 @@
         android:hint="ram id" />
 
     <EditText
-        android:id="@+id/EditTextRegisterRamID"
+        android:id="@+id/EditTextForgotPasswordEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/EditTextRegisterEmail"
-        android:layout_alignLeft="@+id/EditTextRegisterEmail"
+        android:layout_above="@+id/EditTextForgotPasswordRamID"
+        android:layout_alignLeft="@+id/EditTextForgotPasswordRamID"
         android:ems="10"
         android:hint="email" >
 
         <requestFocus />
     </EditText>
 
-    <EditText
-        android:id="@+id/EditTextRegisterPin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/EditTextRegisterEmail"
-        android:layout_below="@+id/EditTextRegisterEmail"
-        android:ems="10"
-        android:hint="last 4-digit ssn" />
-
     <Button
-        android:id="@+id/buttonConfirm"
+        android:id="@+id/ButtonForgotPasswordSubmit"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/EditTextRegisterPin"
+        android:layout_below="@+id/EditTextForgotPasswordRamID"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="67dp"
         android:text="Submit" />
