--- a/res/layout/fragment_hours.xml
+++ b/res/layout/fragment_hours.xml
@@ -5,113 +5,53 @@
     android:background="#FFFFFF" >
 
     <TextView
-        android:id="@+id/txtLabelYouAdded"
+        android:id="@+id/textViewPOP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
         android:padding="10dp"
         android:text="POP&apos;s Dining"
-        android:textSize="25sp" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textViewTitleFSC"
+        android:id="@+id/textViewMarket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtLabelYouAdded"
+        android:layout_below="@+id/textViewPOP"
         android:layout_centerHorizontal="true"
-        android:text="Monday - Friday"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textViewToYourAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewTitleFSC"
-        android:layout_centerHorizontal="true"
-        android:text="7:30am - 7:00pm"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewToYourAccount"
-        android:layout_centerHorizontal="true"
-        android:text="Saturday - Sunday"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true"
-        android:text="10:30am - 7:00pm"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true"
-        android:text="Monday - Thursday"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
-        android:layout_centerHorizontal="true"
-        android:text="7:30am - 10:00pm"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView4"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
         android:padding="10dp"
-        android:text="Market"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="25sp" />
+        android:text="Campus Center Market"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/textViewEco"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView7"
+        android:layout_below="@+id/textViewMarket"
         android:layout_centerHorizontal="true"
-        android:text="Friday"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView11"
-        android:layout_centerHorizontal="true"
-        android:text="7:30am-2:00pm"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView12"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
         android:padding="10dp"
         android:text="Eco Grounds"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="25sp" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView android:id="@+id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/textView8" android:text="Monday - Thursday" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_centerHorizontal="true"/>
-    <TextView android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/textView9" android:text="7:30am - 8:00pm" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_centerHorizontal="true"/>
+    <TextView
+        android:id="@+id/textViewBooknBeans"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewEco"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"
+        android:text="Books n&apos; Beans Café"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textViewBookstore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewBooknBeans"
+        android:layout_centerHorizontal="true"
+        android:padding="10dp"
+        android:text="Bookstore"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
