--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -5,7 +5,7 @@
     android:background="#FFFFFF" >
 
     <ImageView
-        android:id="@+id/imageViewLogo"
+        android:id="@+id/imageViewQR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textSplash"
